// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`for statements > correctly handles intermediate statements in for block 1`] = `
<div>
  <div>
    <div>
      <div>
        1
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        2
      </div>
      <div>
        2
      </div>
    </div>
    <div>
      <div>
        3
      </div>
      <div>
        3
      </div>
    </div>
    
  </div>
  <button>
    Add Item
  </button>
  
</div>
`;

exports[`for statements > correctly handles intermediate statements in for block 2`] = `
<div>
  <div>
    <div>
      <div>
        1
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        2
      </div>
      <div>
        2
      </div>
    </div>
    <div>
      <div>
        3
      </div>
      <div>
        3
      </div>
    </div>
    <div>
      <div>
        4
      </div>
      <div>
        4
      </div>
    </div>
    
  </div>
  <button>
    Add Item
  </button>
  
</div>
`;

exports[`for statements > correctly handles keyed for...of loops 1`] = `
<div>
  <!---->
  <div>
    0:Item 1
  </div>
  <div>
    1:Item 2
  </div>
  <div>
    2:Item 3
  </div>
  <!---->
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > correctly handles keyed for...of loops 2`] = `
<div>
  <!---->
  <div>
    0:Item 3
  </div>
  <div>
    1:Item 2
  </div>
  <div>
    2:Item 1
  </div>
  <!---->
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > correctly handles the index in a for...of loop 1`] = `
<div>
  <div>
    <div>
      0 : a
    </div>
    <div>
      1 : b
    </div>
    <div>
      2 : c
    </div>
    
  </div>
  <button>
    Add Item
  </button>
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > correctly handles the index in a for...of loop 2`] = `
<div>
  <div>
    <div>
      0 : a
    </div>
    <div>
      1 : b
    </div>
    <div>
      2 : c
    </div>
    <div>
      3 : d
    </div>
    
  </div>
  <button>
    Add Item
  </button>
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > correctly handles the index in a for...of loop 3`] = `
<div>
  <div>
    <div>
      0 : d
    </div>
    <div>
      1 : c
    </div>
    <div>
      2 : b
    </div>
    <div>
      3 : a
    </div>
    
  </div>
  <button>
    Add Item
  </button>
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > handles updating with new objects with same key 1`] = `
<div>
  <!---->
  <div>
    0:Item 1
  </div>
  <div>
    1:Item 2
  </div>
  <div>
    2:Item 3
  </div>
  <!---->
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > handles updating with new objects with same key 2`] = `
<div>
  <!---->
  <div>
    0:Item 1!
  </div>
  <div>
    1:Item 2!
  </div>
  <div>
    2:Item 3!
  </div>
  <!---->
  <button>
    Reverse
  </button>
  
</div>
`;

exports[`for statements > renders a simple dynamic array 1`] = `
<div>
  <!---->
  <div
    class="Item 1"
  >
    Item 1
  </div>
  <div
    class="Item 2"
  >
    Item 2
  </div>
  <div
    class="Item 3"
  >
    Item 3
  </div>
  <!---->
  <button>
    Add Item
  </button>
  
</div>
`;

exports[`for statements > renders a simple dynamic array 2`] = `
<div>
  <!---->
  <div
    class="Item 1"
  >
    Item 1
  </div>
  <div
    class="Item 2"
  >
    Item 2
  </div>
  <div
    class="Item 3"
  >
    Item 3
  </div>
  <div
    class="Item 4"
  >
    Item 4
  </div>
  <!---->
  <button>
    Add Item
  </button>
  
</div>
`;

exports[`for statements > renders a simple static array 1`] = `
<div>
  <!---->
  <div
    class="Item 1"
  >
    Item 1
  </div>
  <div
    class="Item 2"
  >
    Item 2
  </div>
  <div
    class="Item 3"
  >
    Item 3
  </div>
  <!---->
  
</div>
`;
